Added citations to paper and fixed camera
Made the camera easier to move. Added a test image to the paper

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -1,33 +1,26 @@
-@article{Park:2006:DSI,
-    title = "Discrete Sibson interpolation",
-    author = "S. W. Park and L. Linsen and O. Kreylos and J. D. Owens and B. Hamann",
-    journal = "IEEE Transactions on Visualization and Computer Graphics",
-    volume = "12",
-    number = "2",
-    month = mar # "\slash " # apr, 
-    year = "2006",
-    pages = "243--253",
+@misc{CelShadingTut,
+    author = "UK StudentZine",
+    title = "Cel Shading in {XNA}",
+    year = "2010",
+    url = "http://blogs.msdn.com/b/ukstudentzine/archive/2010/03/05/cel-shading-in-xna.aspx",
+    note = "{Accessed: February 23, 2013}"
   }
 
-@article{Pellacini:2005:LAH,
-  author = "Fabio Pellacini and Kiril Vidim{\v{c}}e and Aaron Lefohn
-      and Alex Mohr and Mark Leone and John Warren",
-  title = "Lpics: a Hybrid Hardware-Accelerated Relighting
-    Engine for Computer Cinematography",
-  year = "2005",
-  month = aug,
-  journal = "ACM Transactions on Graphics",
-  volume = "24",
-  number = "3",
-  pages = "464--470",
-}
+@InProceedings\{BTM06a,
+    author       = "Barla, Pascal and Thollot, Jo{\"e}lle and Markosian, Lee",
+    title        = "X-Toon: An extended toon shader",
+    booktitle    = "International Symposium on Non-Photorealistic Animation and Rendering (NPAR)",
+    year         = "2006",
+    publisher    = "ACM",
+    url          = "http://maverick.inria.fr/Publications/2006/BTM06a"
+  }
 
-@misc{notes2002,
-  author = {H. Landis},
-  title = {Global Illumination in Production},
-  howpublished = {ACM SIGGRAPH 2002 Course \#16 Notes},
-  month = {July},
-  year = {2002}
+@misc{Ruminate,
+    author = "Scott Franks",
+    title = "Ruminate {XNA}/MonoGame 4.0 {GUI}",
+    year = "2013",
+    url = "http://xnagui.codeplex.com/",
+    note = "{Accessed: March 5, 2013}"
 }
 
 @inproceedings{Jobs95,
