Fixing compile error and fleshing out intro

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -15,6 +15,14 @@
     url          = "http://maverick.inria.fr/Publications/2006/BTM06a"
   }
 
+@misc{TurboSquid,
+    author = "TurboSquid",
+    title = "3D Models, Textures and Plugins at TurboSquid",
+    year = "2013",
+    url = "http://www.turbosquid.com",
+    note = "{Accessed: March 5, 2013}"
+}
+
 @misc{Ruminate,
     author = "Scott Franks",
     title = "Ruminate {XNA}/MonoGame 4.0 {GUI}",
