--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -47,7 +47,7 @@ To make our program more interactive, we developed a GUI using the XNA GUI frame
   \vspace{-10pt}
   \label{fig:2dtexture}
 \end{wrapfigure}
-We extend the concept of a regular toon shader by adding a second dimension to the texture. While the x-axis remains as $N\cdot L$, where {\it{N}} is the surface normal and {\it{L}} is the light direction, the y-axis represents the level of detail. The higher up on the axis, the less detail is used. Conversely, the lower the y-axis value, the more detail. An example of a 2D texture used in this application can be seen in Figure~\ref{fig:2dtexture} (note the y-axis increases downward).
+We extend the concept of a regular toon shader by adding a second dimension to the texture. The x-axis remains as $N\cdot L$, where {\it{N}} is the surface normal and {\it{L}} is the light direction. The y-axis represents the level of detail. The higher up on the axis, the less detail is used. Conversely, the lower the y-axis value, the more detail. An example of a 2D texture used in this application can be seen in Figure~\ref{fig:2dtexture} (note the y-axis increases downward).
 
 The method of computing the y-axis depends on an {\it{attribute map.}} The chosen attribute changes the level of detail, depending on its value. The original paper provided two possible attribute maps: distance and orientation. This paper deals exclusively with the distance attribute mapping. We provide an alternative mapping involving the angle between the camera {\it{look at}} vector and surface normal. 
 
@@ -88,7 +88,12 @@ The negative of the look at vector is used because it is pointed towards the sur
 \end{figure}
 
 \subsection{Light Direction}
-We developed a new method to determine the x-axis value based on the lighting of a scene. The direction to each light in the scene is determined for every vertex. These directions would then be summed and a resulting direction vector would be created. The direction vector is normalized and the final detail is calculated using the same equation for determining the 
+We have developed a new method to determine the shading value on a model based on the lighting of a scene. Equation~\ref{eqn:light_dir} is used for determining the final vector. First, the direction from each light in {\it{Li}} to the vertex position, {\it{P}}, is calculated. These directions are then summed and a resulting direction vector is created. This direction is then normalized and the final detail vector, {\it{D}}, is determined. The same equation for determining the original shading value, $N\cdot L$, is used to determing the final shading value of the vertex. For the purpose of this method, {\it{N}} is represented by the final normalized direction vector, {\it{D}}. 
+
+\begin{equation}
+\label{eqn:light_dir}
+D = normalize({\sum_{i=0}^{|Li|} Li[i] - P})
+\end{equation}
 
 \begin{figure}[h]
 	\centering
@@ -106,9 +111,10 @@ We developed a new method to determine the x-axis value based on the lighting of
 
 \section{Extensions to original X-Toon shader}
 \label{sec:extensions}
-We have extended the original shader offered in the X-Toon paper to increase the usability for various new effects. The first extension involves using colours from the original model's textures when calculating the final detail. The second extension allows for the use of transparency in both the tone texture and original model's textures to create 
+We have extended the original shader offered in the X-Toon paper to increase the usability for various new effects. The first extension involves using colours from the original model's textures when calculating the final detail. The second extension allows for the use of transparency in both the tone texture and original model's textures to create a see-through effect for a model. 
 
 \subsection{Texture blending}
+\label{sec:blending}
 We have added the ability to blend textures from a model into the calculation of the shading and tone detail. This technique gives artists the ability to retain the original look of the model while also applying the X-Toon effects. To achieve this effect, our shader first takes the pixel sample from the original texture. The shading and detail are determined using the calculations explained in previous sections and the final tone detail pixel is kept. To mix the colours of the original texture and the tone detail pixel, a simple multiplication of the {\it{RGB}} channels is performed. The resulting pixel is a blend of the original texture pixel and the sampled tone detail texture. Figure~\ref{fig:texturing} shows an example of a model with and without texture blending.
 
 \begin{figure}[h]
@@ -120,12 +126,20 @@ We have added the ability to blend textures from a model into the calculation of
 
 \subsection{Texture transparency}
 \label{sec:transparency}
+The original X-Toon shader only supports the use of an opaque tone detail texture. We extend the shader to support the alpha channel of a tone detail texture to allow the use of transparency. Our method allows blending with original model's texture described in Section~\ref{sec:blending} or with the original method of using colour directly from the tone detail map. An example of transparency in a tone detail map can be seen in Figure~\ref{fig:transparency}. This example uses the tone detail texture shown in Figure~\ref{fig:transparent_tone}. The model is positioned so the detail is approximately at half. This gives each vertex an alpha of about 0.5 and the result is a model that is considerably transparent.
 
 \begin{figure}[h]
 	\centering
 	\includegraphics[width=2.5in]{images/transparency}
 	\caption{Transparency affecting output}
 	\label{fig:transparency}
+\end{figure}
+
+\begin{figure}[h]
+	\centering
+	\includegraphics[width=2.5in]{images/xtoon_shading_alpha}
+	\caption{Transparent tone detail texture}
+	\label{fig:transparent_tone}
 \end{figure}
 
 \section{Results}
@@ -139,46 +153,65 @@ Some results are ablkjalskdjalskdjasd.
 	\label{fig:hologram}
 \end{figure}
 
-\begin{figure}[p]
+\begin{figure}[h]
 	\centering
-	\includegraphics[width=5.5in]{images/inverse_lighting}
+	\includegraphics[width=4in]{images/inverse_lighting}
 	\caption{Inverse Lighting result}
 	\label{fig:inverseLighting}
 \end{figure}
 
-\begin{figure}[p]
+\begin{figure}[h]
 	\centering
-	\includegraphics[width=5.5in]{images/lighting}
+	\includegraphics[width=4in]{images/lighting}
 	\caption{Lighting result}
 	\label{fig:lightingResult}
 \end{figure}
 
-\begin{figure}[p]
+\begin{figure}[h]
 	\centering
-	\includegraphics[width=5.5in]{images/stipple-hatch-result1}
+	\includegraphics[width=4in]{images/stipple-hatch-result1}
 	\caption{Stipple/hatching result}
 	\label{fig:stippleHatch1}
 \end{figure}
 
-\begin{figure}[p]
+\begin{figure}[h]
 	\centering
-	\includegraphics[width=5.5in]{images/stipple-hatch-result2}
+	\includegraphics[width=6in]{images/stipple-hatch-result2}
 	\caption{Stipple/hatching result}
 	\label{fig:stippleHatch2}
 \end{figure}
 
-\begin{figure}[p]
+\begin{figure}[h]
   \centering
-  \includegraphics[width=5.5in]{images/test}
+  \includegraphics[width=4in]{images/test}
   \caption{Sample illustration.}
 \end{figure}
 
 
 \section{Discussion and Future Work}
 \label{sec:discussion}
+We have presented multiple extensions to the original X-Toon shader developed by  ~\cite{BTM06a}.  In order to retain the speed of the X-Toon shader, we attempted to minimize the complexity of the code executed in the shaders. The code added for transparency and texture blending as well as our new calculations for tone detail resulted in minimal performance reductions. To investigate the performance of our code, we used a frame counter and removed the frame limiter found in XNA.
+
+\begin{table}
+	\centering
+	\label{tab:fps}
+	\caption{Maximum frames per second SHOULD RECALCULATE}
+	\begin{tabular}{cc}
+		\hline
+    		Method  & Frames per second (max) \\
+		\hline\hline \\
+    		Original X-Toon  & 1132                       \\
+    		Light Direction & 1102                      \\
+		Angle & 1026 \\
+		Texture Blending & 1033 \\
+		Transparency & 1132 \\
+		\hline
+	\end{tabular}
+\end{table}
 
 \subsection{Alpha blending correction}
 
+\subsection{Lighting model}
 
 \section{Conclusion}
 \label{sec:conclusion}
